<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="16dp">

    <TextView
        android:id="@+id/tv_title_repository"
        android:text="@string/title"
        android:fontFamily="@font/roboto_bold"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_desc_repository"
        android:text="@string/description"
        android:textColor="@color/grey_70"
        android:textSize="14sp"
        android:fontFamily="@font/roboto_regular"
        android:layout_width="wrap_content"
        android:maxWidth="319dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title_repository"/>

    <ImageView
        android:id="@+id/iv_star"
        android:src="@drawable/ic_icon_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tv_desc_repository"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tv_number_of_stars"
        android:text="@string/zero_number"
        android:textSize="11sp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/grey_70"
        android:layout_marginStart="7dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/iv_star"
        app:layout_constraintBottom_toBottomOf="@id/iv_star"
        app:layout_constraintStart_toEndOf="@id/iv_star"/>

    <TextView
        android:id="@+id/tv_updated_repository"
        android:text="@string/updated_0_hours_ago"
        android:textSize="11sp"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/grey_70"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_number_of_stars"
        app:layout_constraintTop_toTopOf="@id/tv_number_of_stars"
        app:layout_constraintBottom_toBottomOf="@id/tv_number_of_stars"/>

    <View
        android:background="@color/grey_f5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_star"/>

</androidx.constraintlayout.widget.ConstraintLayout>